# NoAiArt_backend

./: .gitignore  docker-compose.yaml
AuthService/: dockerfile  pyproject.toml
AuthService/alembic/: env.py
AuthService/alembic/versions/: 34a9dc828eb0_rolefix.py  cf691f6b80ca_usertable.py
AuthService/src/authservice/: auth.py  database.py  main.py  models.py  schemas.py  security.py  settings.py
AuthService/src/authservice/rabbitmq/: producer_user_auth.py
BoardService/: dockerfile  pyproject.toml
BoardService/src/boardservice/: main.py  models.py  settings.py
CommentService/: dockerfile  pyproject.toml
CommentService/alembic/: env.py
CommentService/alembic/versions/: 4483b09a99e9_initial_model.py
CommentService/src/commentservice/: main.py  models.py  schemas.py
FollowService/: pyproject.toml
Gateway/: dockerfile  pyproject.toml
Gateway/src/gateway/: auth.py  main.py  schemas.py  settings.py
Gateway/src/gateway/clients/: auth_client.py  comment_client.py  pin_client.py  user_client.py
LikeService/: pyproject.toml
MessengerService/: pyproject.toml
NotificationService/: pyproject.toml
PinService/: dockerfile  pyproject.toml
PinService/alembic/: env.py
PinService/alembic/versions/: 6e991ed2261b_created_pin_table.py
PinService/src/pinservice/: database.py  main.py  models.py  schemas.py  settings.py
PinService/src/pinservice/reopositories/: s3storage.py
QdrantVDB/qdrant_migrations/: migration.py
RecommendationService/: pyproject.toml
SearchService/: pyproject.toml
TagService/: pyproject.toml
UserService/: dockerfile  pyproject.toml
UserService/alembic/: env.py
UserService/alembic/versions/: 2e88f509dc4f_создание_таблицы_user.py
UserService/src/userservice/: main.py  models.py  schemas.py  settings.py
UserService/src/userservice/rabbitmq/: consumer_user_auth.py
data/.minio.sys/: format.json
data/.minio.sys/tmp/.trash/1cf9b204-a4f7-446c-9870-13e84a43175d/: xl.meta.bkp
data/.minio.sys/tmp/.trash/24fc4d72-e82a-4d3e-a5ea-8a5be3f3d83b/: xl.meta.bkp
data/.minio.sys/tmp/.trash/46d87ef0-f63e-477a-8728-8a0d0461538b/: xl.meta.bkp
data/.minio.sys/tmp/.trash/604e0c3b-7ef2-416d-bb8c-e2a0e0a7c2b0/: xl.meta.bkp
data/.minio.sys/tmp/.trash/7c40d562-71a1-4eb9-a7ee-1694ebef6687/: xl.meta.bkp
data/.minio.sys/tmp/.trash/7c5427ed-8437-465d-ab29-171442e9a0be/: xl.meta.bkp
data/.minio.sys/tmp/.trash/9e5ce269-cebe-4651-bfb4-228baee8f377/: xl.meta.bkp
data/.minio.sys/tmp/.trash/a42963c9-1244-41bb-a333-d08eb4ec3f48/: xl.meta.bkp
data/.minio.sys/tmp/.trash/b1a8ef37-e2ef-4724-a84f-08c33d18c8c7/: xl.meta.bkp
data/.minio.sys/tmp/.trash/b5d43e6b-6ede-4605-b2b5-b4811695bd6e/: xl.meta.bkp
data/.minio.sys/tmp/.trash/c9b36c45-45e3-46da-9383-8d9da13caf22/: xl.meta.bkp
data/.minio.sys/tmp/.trash/d5ea312d-6881-4029-91dd-c976eb166fc5/: xl.meta.bkp
data/noaiartbucket/pins/0/a8fc852e-cd5b-4107-b455-0b45dadf2562.png/98e5e0c4-bd7c-4e0f-8cd6-0d983e322e74/: part.1
data/noaiartbucket/pins/1/61d895e1-9fa1-4440-83f0-a9e6004ee18d.jpg/db71de1f-a7eb-49a3-9a63-f7c0592a08f8/: part.1
data/noaiartbucket/pins/1/d312c6f6-4196-4646-b43a-a8fad2c49dfd.jpg/601fd081-ff85-4ea0-8a8e-1adff5d53dd3/: part.1
initscripts/: qdrant_migration.py  settings.py
