[project]
name = "pinservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Nokotachi",email = "none@none.none"}
]
readme = "README.md"
requires-python = "=3.12.7"
dependencies = [
    "fastapi[all] (>=0.121.2,<0.122.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "sqlalchemy (>=2.0.44,<3.0.0)",
    "pydantic (>=2.12.4,<3.0.0)",
    "pydantic-settings (>=2.12.0,<3.0.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "aioboto3 (>=15.5.0,<16.0.0)",
]

[tool.poetry]
packages = [{include = "pinservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
