[project]
name = "userservice"
version = "0.1.0"
description = ""
authors = [
    {name = "Nokotachi",email = "none@none.none"}
]
readme = "README.md"
requires-python = "=3.12.7"
dependencies = [
    "fastapi[all] (>=0.120.4,<0.121.0)",
    "alembic (>=1.17.1,<2.0.0)",
    "pgvector (>=0.4.1,<0.5.0)",
    "psycopg2-binary (>=2.9.11,<3.0.0)",
    "asyncpg (>=0.30.0,<0.31.0)",
    "asyncio (>=4.0.0,<5.0.0)",
    "aio-pika (>=9.5.7,<10.0.0)"
]

[tool.poetry]
packages = [{include = "userservice", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
